# Notepad

./: .gitignore  CLAUDE.md  README(기존).md  README.md  frames.gv
FRNet_ROS/: CMakeLists.txt  README.md  package.xml
FRNet_ROS/configs/_base_/datasets/: mldas_seg.py  school_seg.py  semantickitti_seg.py
FRNet_ROS/configs/frnet/: frnet-mldas_seg.py  frnet-school_seg.py
FRNet_ROS/frnet/datasets/: MLDAS_dataset.py  __init__.py  school_dataset.py
FRNet_ROS/launch/: frnet.launch  frnet_seg.launch
FRNet_ROS/rviz/: frnet.rviz
FRNet_ROS/scripts/: frnet_segmentation_node.py
code/: mapOptmization.cpp  utility.h
dwa/: CMakeLists.txt  README.md  package.xml
dwa/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  ekf_localization.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml  move_base_params.yaml  path_planning_params.yaml  robot_dynamics_params.yaml  waypoint_manager_params.yaml
dwa/launch/: dwa_navigation.launch  dwa_simulation.launch  dwa_test.launch  gazebo_spawn(empty_world).launch  gazebo_spawn.launch  husky_control_nav_localization.launch  husky_gazebo_spawn.launch  husky_ouster.launch  husky_ouster_dwa.launch  husky_ouster_gps.launch  os1_world.launch
dwa/plugins/: husky_velocity_control_plugin.xml
dwa/plugins/include/: GazeboRosOusterLaser.h  husky_velocity_control_plugin.h
dwa/plugins/src/: GazeboRosOusterLaser.cpp
dwa/rviz/: dwa.rviz  husky_ouster.rviz  husky_velodyne.rviz
dwa/scripts/: imu_timestamp_fix.py  navigation_manager.py  timestamp_fix.py  waypoint_manager.py
dwa/urdf/: OS0-32.urdf.xacro  OS1-32.urdf.xacro  OS1-64.urdf.xacro  custom_description.gazebo.xacro  custom_description.urdf.xacro  custom_description_ouster.urdf.xacro  custom_description_ouster_gps.urdf.xacro
dwa/worlds/: citysim_gazebo.world  example.world
faster-lio/: README.ko.md  README.md  TODO.md
faster-lio/Log/: traj.txt
faster-lio/app/: run_mapping_online.cc
faster-lio/cmake/: packages.cmake
faster-lio/config/: ouster32.yaml
faster-lio/include/: imu_processing.hpp  pointcloud_preprocess.h
faster-lio/launch/: mapping_ouster32.launch
faster-lio/rviz_cfg/: PATH.rviz  loam_livox.rviz
faster-lio/src/: laser_mapping.cc  options.cc  pointcloud_preprocess.cc
gazebo_dwa/husky_customization/husky_custom_gazebo/: CMakeLists.txt  package.xml
gazebo_dwa/husky_dwa_navigation/: CMakeLists.txt  package.xml
gazebo_dwa/husky_dwa_navigation/config/: costmap_common_params.yaml  dwa_local_planner_params(미사용).yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params(미사용).yaml  move_base_params.yaml  path_planning_params.yaml  robot_dynamics_params.yaml
gazebo_dwa/husky_dwa_navigation/launch/: husky_control_nav_localization.launch  husky_gazebo_spawn.launch  husky_ouster_dwa.launch  integrated_navigation.launch  ouster_topics_only.launch
gazebo_dwa/husky_dwa_navigation/scripts/: bag_player.py  calibrate_rotation.py  gps_publisher.py  gps_server.py  initialize_pose.py  make_frame.py  move_front.py  navigation_manager_node.py  path_visualizer.py  sync.py  sync2.py  sync_unified.py  waypoints_generator.py  waypoints_manager.py
gazebo_dwa/husky_dwa_navigation/web/: index.html
gazebo_dwa/ouster_description/urdf/: OS1-32.urdf.xacro
gazebo_simulation/: CMakeLists.txt  README.md  package.xml
gazebo_simulation/launch/: gazebo_spawn.launch  gazebo_spawn_TF.launch
gazebo_simulation/worlds/: empty.world
husky/: README.md
husky/husky_control/config/: control.yaml
husky/husky_control/launch/: teleop.launch
husky/husky_description/urdf/: husky.urdf.xacro  wheel.urdf.xacro
husky_robot/husky_base/: CHANGELOG.rst  package.xml
husky_robot/husky_base/launch/: base.launch
husky_robot/husky_bringup/: CHANGELOG.rst  package.xml
husky_robot/husky_bringup/config/: microstrain.yaml
ins/: CMakeLists.txt  package.xml
ins/config/: ekf_map.yaml  navsat_transform.yaml
ins/launch/: ins.launch  ins_faster_lio.launch  ins_fusion.launch  ins_wheel.launch
ins/params/: ins_faster_lio.yaml  ins_params.yaml  ins_wheel.yaml
integrated_navigation/: CMakeLists.txt  package.xml
integrated_navigation/launch/: full_system.launch  gps.launch  husky_control_nav_localization.launch  integrated_navigation.launch
integrated_navigation/rviz/: integrated_navigation.rviz
integrated_navigation/scripts/: debug_full_system.sh  full_system.sh  simulation_full_system.sh
integrated_navigation/scripts/navigation/: path_visualizer.py
integrated_navigation/scripts/utils/: initialize_pose.py  make_frame.py
kakao_api/: CMakeLists.txt  README.md  package.xml
kakao_api/launch/: debug.launch  debug_kakao.launch  debug_kakao_api.launch  kakao_api.launch
kakao_api/rviz/: kakao.rviz
kakao_api/scripts/: debug_gps_publisher.py  gps_debug.py  kakao_route_planner.py  route_planner.py  waypoint_to_globalGoal.py  web_server.py
kakao_api/scripts/simulator/: gps_publisher.py  map_frame.py
kakao_api/web/: index.html
lidarseg3d/: requirements.txt
lidarseg3d/det3d/datasets/: __init__.py
oss/husky_robot/husky_robot/: CHANGELOG.rst  (+1 more)
ouster-ros/launch/: sensor_only.launch
robot_description/: CMakeLists.txt  README.md  package.xml
robot_description/config/: robot.yaml
robot_description/launch/: display.launch  robot_description.launch
robot_description/plugins/include/: GazeboRosOusterLaser.h
robot_description/plugins/src/: GazeboRosOusterLaser.cpp  husky_gazebo_plugin.cpp  husky_velocity_control_plugin.cpp
robot_description/rviz/: robot.rviz
robot_description/urdf/: OS1-32.urdf.xacro  custom_description.urdf.xacro  gps.urdf.xacro
robot_localization/: CHANGELOG.rst  CMakeLists.txt  package.xml
robot_localization/src/: ekf_node.cpp  navsat_transform.cpp  navsat_transform_node.cpp  ros_filter.cpp  ros_filter_utilities.cpp  ros_robot_localization_listener.cpp  ukf_node.cpp
robot_localization/test/: test_ros_robot_localization_listener.cpp  test_ros_robot_localization_listener_publisher.cpp
ublox_f9p/: 변경예정
ysw/maps/: last_pcd_names.txt
(+40 files in other folders)
