<?xml version="1.0"?>
<package format="2">
  <name>gazebo_simulation</name>
  <version>1.0.0</version>
  <description>Gazebo simulation environment for DWA navigation with Husky robot and Ouster lidar</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Gazebo & Simulation dependencies -->
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>

  <!-- URDF dependencies -->
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <!-- Exec dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Gazebo & Simulation dependencies -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <!-- URDF dependencies -->
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Robot description dependency -->
  <exec_depend>robot_description</exec_depend>

  <!-- Python 3 dependencies -->
  <depend>python3-numpy</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
