<?xml version="1.0"?>
<package format="2">
  <name>ins</name>
  <version>0.0.1</version>
  <description>Integrated Navigation System using robot_localization</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>robot_localization</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
