<?xml version="1.0"?>
<package format="2">
  <name>integrated_navigation</name>
  <version>0.0.1</version>
  <description>Integrated navigation system for debugging (Gazebo + Faster-LIO + DWA + Kakao API)</description>

  <maintainer email="user@todo.todo">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>dwa</exec_depend>
  <exec_depend>faster_lio</exec_depend>
  <exec_depend>kakao_api</exec_depend>
  <exec_depend>robot_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
  </export>
</package>
