<?xml version="1.0"?>
<package format="2">
  <name>kakao_api</name>
  <version>1.0.0</version>
  <description>Kakao Map API integration for waypoint-based autonomous navigation with GPS/UTM conversion</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <!-- Exec dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>move_base</exec_depend>

  <!-- Python 3 dependencies -->
  <depend>python3-numpy</depend>

  <export>
  </export>
</package>